@@ -24,7 +24,7 @@ public final class TileCompressor extends TileStandardWorkMachine implements INa
   @Override
   protected final void perform_work(){
     world.playSound(null, pos, SoundEvents.BLOCK_ANVIL_PLACE, SoundCategory.BLOCKS, 0.7f, 0.5f); // lowest pitch can be
-    inventory.output_result();
+    inventory.finish_work();
   }
 
   @Override
